--- a/assets/style.less
+++ b/assets/style.less
@@ -24,6 +24,9 @@ html, body {
     background : white;
     box-shadow : 2px 3px 1px 1px #bbb;
     border-radius : 4px;
+    .col-xs-12 {
+      margin-bottom: 15px;
+    }
     .quote-container {
       margin : 20px 0px;
       .text {
