--- a/assets/style.less
+++ b/assets/style.less
@@ -21,6 +21,13 @@ html, body {
     transition: all 1s ease-in-out;
     height: auto;
     min-height: 250px;
+    @media screen and (max-height : 320px){
+      min-height : 350px;
+    }
+
+    @media screen and (max-height : 450px){
+      min-height : 300px;
+    }
     background : white;
     box-shadow : 2px 3px 1px 1px #bbb;
     border-radius : 4px;
