--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ body {
     min-height: 350px;
   }
 }
-@media screen and (max-height: 450px) {
+@media screen and (max-height: 450px) and (min-height: 321px) {
   .big-outer-container .main-container {
     min-height: 300px;
   }
