--- a/assets/style.less
+++ b/assets/style.less
@@ -25,7 +25,7 @@ html, body {
       min-height : 350px;
     }
 
-    @media screen and (max-height : 450px){
+    @media screen and (max-height : 450px) and (min-height : 321px){
       min-height : 300px;
     }
     background : white;
