--- a/assets/style.less
+++ b/assets/style.less
@@ -21,11 +21,11 @@ html, body {
     transition: all 1s ease-in-out;
     height: auto;
     min-height: 250px;
-    @media screen and (max-height : 320px){
+    @media screen and (max-width : 320px){
       min-height : 350px;
     }
 
-    @media screen and (max-height : 450px) and (min-height : 321px){
+    @media screen and (max-width : 450px) and (min-width : 321px){
       min-height : 300px;
     }
     background : white;
