--- a/assets/style.less
+++ b/assets/style.less
@@ -16,6 +16,10 @@ html, body {
   justify-content: center;
 }
 
+.transition {
+  transition: all 1s ease-in-out;
+}
+
 .big-outer-container {
   .main-container {
     transition: all 1s ease-in-out;
