--- a/assets/style.less
+++ b/assets/style.less
@@ -20,6 +20,14 @@ html, body {
   transition: all 1s ease-in-out;
 }
 
+.opacity-0 {
+  opacity : 0;
+}
+
+.opacity-1 {
+  opacity : 1;
+}
+
 .big-outer-container {
   .main-container {
     transition: all 1s ease-in-out;
